// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`GroupTree component renders correctly empty tree 1`] = `
<View
  style={Object {}}
/>
`;

exports[`GroupTree component renders nothing with invalid data 1`] = `
<View
  style={Object {}}
/>
`;

exports[`GroupTree component should render correctly uncheck item 1`] = `
<View
  style={Object {}}
>
  <View
    accessible={true}
    collapsable={false}
    focusable={true}
    onClick={[Function]}
    onResponderGrant={[Function]}
    onResponderMove={[Function]}
    onResponderRelease={[Function]}
    onResponderTerminate={[Function]}
    onResponderTerminationRequest={[Function]}
    onStartShouldSetResponder={[Function]}
    style={
      Object {
        "opacity": 1,
      }
    }
    testID="group_item.container"
  >
    <View
      style={
        Object {
          "flexDirection": "row",
        }
      }
      testID="group_item"
    >
      <View
        accessibilityState={
          Object {
            "disabled": false,
          }
        }
        accessible={true}
        collapsable={false}
        focusable={true}
        hitSlop={
          Object {
            "bottom": 10,
            "left": 10,
            "right": 10,
            "top": 10,
          }
        }
        onClick={[Function]}
        onResponderGrant={[Function]}
        onResponderMove={[Function]}
        onResponderRelease={[Function]}
        onResponderTerminate={[Function]}
        onResponderTerminationRequest={[Function]}
        onStartShouldSetResponder={[Function]}
        style={
          Object {
            "backgroundColor": "rgba(255,255,255,0)",
            "flexDirection": "row",
            "height": "100%",
            "marginHorizontal": 8,
            "opacity": 1,
            "width": 1,
          }
        }
        testID="group_item.button_wrapper"
      >
        <View
          style={
            Array [
              Object {
                "alignItems": "center",
                "flexDirection": "row",
                "justifyContent": "center",
              },
              undefined,
            ]
          }
          testID="button_wrapper.content"
        >
          <View
            style={
              Object {
                "alignSelf": "center",
                "backgroundColor": "#FFFFFF",
                "marginLeft": -6,
                "paddingVertical": 4,
              }
            }
          >
            <View
              accessibilityState={
                Object {
                  "disabled": true,
                }
              }
              accessible={true}
              collapsable={false}
              focusable={false}
              hitSlop={
                Object {
                  "bottom": 10,
                  "left": 10,
                  "right": 10,
                  "top": 10,
                }
              }
              onClick={[Function]}
              onResponderGrant={[Function]}
              onResponderMove={[Function]}
              onResponderRelease={[Function]}
              onResponderTerminate={[Function]}
              onResponderTerminationRequest={[Function]}
              onStartShouldSetResponder={[Function]}
              style={
                Object {
                  "opacity": 1,
                }
              }
            >
              <View
                style={
                  Array [
                    Object {
                      "alignItems": "center",
                      "flexDirection": "row",
                    },
                    undefined,
                    Object {
                      "backgroundColor": undefined,
                    },
                  ]
                }
              >
                <View
                  style={
                    Array [
                      undefined,
                      undefined,
                      undefined,
                    ]
                  }
                >
                  <View
                    testID="group_item.button_wrapper.icon"
                  />
                </View>
              </View>
            </View>
          </View>
        </View>
      </View>
      <View
        style={
          Array [
            Object {
              "flex": 1,
              "flexDirection": "row",
              "paddingLeft": 8,
              "paddingVertical": 8,
            },
            undefined,
          ]
        }
      >
        <View
          style={
            Array [
              Object {
                "borderRadius": 6,
                "height": 40,
                "width": 40,
              },
              undefined,
            ]
          }
          testID="avatar"
        >
          <View
            style={
              Array [
                Object {
                  "borderRadius": 6,
                  "height": 40,
                  "width": 40,
                },
                Object {
                  "backgroundColor": "#A4A9B7",
                },
              ]
            }
            testID="avatar_container"
          >
            <View
              style={
                Array [
                  Object {
                    "overflow": "hidden",
                  },
                  Array [
                    Object {
                      "borderRadius": 6,
                      "height": 40,
                      "width": 40,
                    },
                    Object {
                      "borderColor": "#F2F5F8",
                      "borderWidth": 2,
                    },
                    Object {
                      "backgroundColor": "#FFFFFF",
                    },
                  ],
                ]
              }
            >
              <FastImageView
                onFastImageError={[Function]}
                resizeMode="cover"
                source={null}
                style={
                  Object {
                    "bottom": 0,
                    "left": 0,
                    "position": "absolute",
                    "right": 0,
                    "top": 0,
                  }
                }
                testID="avatar.image"
              />
            </View>
          </View>
        </View>
        <View
          style={
            Object {
              "flex": 1,
              "justifyContent": "center",
              "paddingHorizontal": 12,
            }
          }
        >
          <Text
            numberOfLines={2}
            style={
              Array [
                Object {
                  "color": "#212745",
                  "fontFamily": "BeVietnamPro-Medium",
                  "fontSize": 15,
                },
                Object {
                  "color": "#282E53",
                },
                Object {
                  "justifyContent": "center",
                  "width": "100%",
                },
              ]
            }
          >
            EVOL Community
          </Text>
        </View>
        <View
          accessibilityState={
            Object {
              "disabled": false,
            }
          }
          accessible={true}
          collapsable={false}
          focusable={true}
          onClick={[Function]}
          onResponderGrant={[Function]}
          onResponderMove={[Function]}
          onResponderRelease={[Function]}
          onResponderTerminate={[Function]}
          onResponderTerminationRequest={[Function]}
          onStartShouldSetResponder={[Function]}
          style={
            Object {
              "opacity": 1,
            }
          }
          testID="group_item.check_box"
        >
          <View
            style={
              Array [
                Object {
                  "alignItems": "center",
                  "flexDirection": "row",
                },
                Object {},
              ]
            }
          >
            <View
              style={
                Array [
                  Object {
                    "backgroundColor": "#FFFFFF",
                    "bottom": 2,
                    "left": 2,
                    "position": "absolute",
                    "right": 2,
                    "top": 2,
                  },
                  undefined,
                ]
              }
            />
            <View
              accessibilityState={
                Object {
                  "disabled": true,
                }
              }
              accessible={true}
              collapsable={false}
              focusable={false}
              hitSlop={
                Object {
                  "bottom": 10,
                  "left": 10,
                  "right": 10,
                  "top": 10,
                }
              }
              onClick={[Function]}
              onResponderGrant={[Function]}
              onResponderMove={[Function]}
              onResponderRelease={[Function]}
              onResponderTerminate={[Function]}
              onResponderTerminationRequest={[Function]}
              onStartShouldSetResponder={[Function]}
              style={
                Object {
                  "opacity": 1,
                }
              }
            >
              <View
                style={
                  Array [
                    Object {
                      "alignItems": "center",
                      "flexDirection": "row",
                    },
                    undefined,
                    Object {
                      "backgroundColor": undefined,
                    },
                  ]
                }
              >
                <View
                  style={
                    Array [
                      undefined,
                      undefined,
                      undefined,
                    ]
                  }
                >
                  <View />
                </View>
              </View>
            </View>
          </View>
        </View>
      </View>
    </View>
  </View>
  <View
    accessible={true}
    collapsable={false}
    focusable={true}
    onClick={[Function]}
    onResponderGrant={[Function]}
    onResponderMove={[Function]}
    onResponderRelease={[Function]}
    onResponderTerminate={[Function]}
    onResponderTerminationRequest={[Function]}
    onStartShouldSetResponder={[Function]}
    style={
      Object {
        "opacity": 1,
      }
    }
    testID="group_item.container"
  >
    <View
      style={
        Object {
          "flexDirection": "row",
        }
      }
      testID="group_item"
    >
      <View
        style={
          Array [
            Object {
              "backgroundColor": "#E3E6F2",
              "height": "100%",
              "marginHorizontal": 8,
              "width": 1,
            },
          ]
        }
        testID="group_item.ui_level"
      />
      <View
        accessibilityState={
          Object {
            "disabled": false,
          }
        }
        accessible={true}
        collapsable={false}
        focusable={true}
        hitSlop={
          Object {
            "bottom": 10,
            "left": 10,
            "right": 10,
            "top": 10,
          }
        }
        onClick={[Function]}
        onResponderGrant={[Function]}
        onResponderMove={[Function]}
        onResponderRelease={[Function]}
        onResponderTerminate={[Function]}
        onResponderTerminationRequest={[Function]}
        onStartShouldSetResponder={[Function]}
        style={
          Object {
            "backgroundColor": "rgba(255,255,255,0)",
            "flexDirection": "row",
            "height": "100%",
            "marginHorizontal": 8,
            "opacity": 1,
            "width": 1,
          }
        }
        testID="group_item.button_wrapper"
      >
        <View
          style={
            Array [
              Object {
                "alignItems": "center",
                "flexDirection": "row",
                "justifyContent": "center",
              },
              undefined,
            ]
          }
          testID="button_wrapper.content"
        >
          <View
            style={
              Object {
                "alignSelf": "center",
                "backgroundColor": "#FFFFFF",
                "marginLeft": -6,
                "paddingVertical": 4,
              }
            }
          >
            <View
              accessibilityState={
                Object {
                  "disabled": true,
                }
              }
              accessible={true}
              collapsable={false}
              focusable={false}
              hitSlop={
                Object {
                  "bottom": 10,
                  "left": 10,
                  "right": 10,
                  "top": 10,
                }
              }
              onClick={[Function]}
              onResponderGrant={[Function]}
              onResponderMove={[Function]}
              onResponderRelease={[Function]}
              onResponderTerminate={[Function]}
              onResponderTerminationRequest={[Function]}
              onStartShouldSetResponder={[Function]}
              style={
                Object {
                  "opacity": 1,
                }
              }
            >
              <View
                style={
                  Array [
                    Object {
                      "alignItems": "center",
                      "flexDirection": "row",
                    },
                    undefined,
                    Object {
                      "backgroundColor": undefined,
                    },
                  ]
                }
              >
                <View
                  style={
                    Array [
                      undefined,
                      undefined,
                      undefined,
                    ]
                  }
                >
                  <View
                    testID="group_item.button_wrapper.icon"
                  />
                </View>
              </View>
            </View>
          </View>
        </View>
      </View>
      <View
        style={
          Array [
            Object {
              "flex": 1,
              "flexDirection": "row",
              "paddingLeft": 8,
              "paddingVertical": 8,
            },
            undefined,
          ]
        }
      >
        <View
          style={
            Array [
              Object {
                "borderRadius": 6,
                "height": 40,
                "width": 40,
              },
              undefined,
            ]
          }
          testID="avatar"
        >
          <View
            style={
              Array [
                Object {
                  "borderRadius": 6,
                  "height": 40,
                  "width": 40,
                },
                Object {
                  "backgroundColor": "#A4A9B7",
                },
              ]
            }
            testID="avatar_container"
          >
            <View
              style={
                Array [
                  Object {
                    "overflow": "hidden",
                  },
                  Array [
                    Object {
                      "borderRadius": 6,
                      "height": 40,
                      "width": 40,
                    },
                    Object {
                      "borderColor": "#F2F5F8",
                      "borderWidth": 2,
                    },
                    Object {
                      "backgroundColor": "#FFFFFF",
                    },
                  ],
                ]
              }
            >
              <FastImageView
                onFastImageError={[Function]}
                resizeMode="cover"
                source={null}
                style={
                  Object {
                    "bottom": 0,
                    "left": 0,
                    "position": "absolute",
                    "right": 0,
                    "top": 0,
                  }
                }
                testID="avatar.image"
              />
            </View>
          </View>
        </View>
        <View
          style={
            Object {
              "flex": 1,
              "justifyContent": "center",
              "paddingHorizontal": 12,
            }
          }
        >
          <Text
            numberOfLines={2}
            style={
              Array [
                Object {
                  "color": "#212745",
                  "fontFamily": "BeVietnamPro-Medium",
                  "fontSize": 15,
                },
                Object {
                  "color": "#282E53",
                },
                Object {
                  "justifyContent": "center",
                  "width": "100%",
                },
              ]
            }
          >
            Bein Community
          </Text>
        </View>
        <View
          accessibilityState={
            Object {
              "disabled": false,
            }
          }
          accessible={true}
          collapsable={false}
          focusable={true}
          onClick={[Function]}
          onResponderGrant={[Function]}
          onResponderMove={[Function]}
          onResponderRelease={[Function]}
          onResponderTerminate={[Function]}
          onResponderTerminationRequest={[Function]}
          onStartShouldSetResponder={[Function]}
          style={
            Object {
              "opacity": 1,
            }
          }
          testID="group_item.check_box"
        >
          <View
            style={
              Array [
                Object {
                  "alignItems": "center",
                  "flexDirection": "row",
                },
                Object {},
              ]
            }
          >
            <View
              style={
                Array [
                  Object {
                    "backgroundColor": "#FFFFFF",
                    "bottom": 2,
                    "left": 2,
                    "position": "absolute",
                    "right": 2,
                    "top": 2,
                  },
                  undefined,
                ]
              }
            />
            <View
              accessibilityState={
                Object {
                  "disabled": true,
                }
              }
              accessible={true}
              collapsable={false}
              focusable={false}
              hitSlop={
                Object {
                  "bottom": 10,
                  "left": 10,
                  "right": 10,
                  "top": 10,
                }
              }
              onClick={[Function]}
              onResponderGrant={[Function]}
              onResponderMove={[Function]}
              onResponderRelease={[Function]}
              onResponderTerminate={[Function]}
              onResponderTerminationRequest={[Function]}
              onStartShouldSetResponder={[Function]}
              style={
                Object {
                  "opacity": 1,
                }
              }
            >
              <View
                style={
                  Array [
                    Object {
                      "alignItems": "center",
                      "flexDirection": "row",
                    },
                    undefined,
                    Object {
                      "backgroundColor": undefined,
                    },
                  ]
                }
              >
                <View
                  style={
                    Array [
                      undefined,
                      undefined,
                      undefined,
                    ]
                  }
                >
                  <View />
                </View>
              </View>
            </View>
          </View>
        </View>
      </View>
    </View>
  </View>
  <View
    accessible={true}
    collapsable={false}
    focusable={true}
    onClick={[Function]}
    onResponderGrant={[Function]}
    onResponderMove={[Function]}
    onResponderRelease={[Function]}
    onResponderTerminate={[Function]}
    onResponderTerminationRequest={[Function]}
    onStartShouldSetResponder={[Function]}
    style={
      Object {
        "opacity": 1,
      }
    }
    testID="group_item.container"
  >
    <View
      style={
        Object {
          "flexDirection": "row",
        }
      }
      testID="group_item"
    >
      <View
        style={
          Array [
            Object {
              "backgroundColor": "#E3E6F2",
              "height": "100%",
              "marginHorizontal": 8,
              "width": 1,
            },
          ]
        }
        testID="group_item.ui_level"
      />
      <View
        style={
          Array [
            Object {
              "backgroundColor": "#E3E6F2",
              "height": "100%",
              "marginHorizontal": 8,
              "width": 1,
            },
          ]
        }
        testID="group_item.ui_level"
      />
      <View
        accessibilityState={
          Object {
            "disabled": true,
          }
        }
        accessible={true}
        collapsable={false}
        focusable={true}
        hitSlop={
          Object {
            "bottom": 10,
            "left": 10,
            "right": 10,
            "top": 10,
          }
        }
        onClick={[Function]}
        onResponderGrant={[Function]}
        onResponderMove={[Function]}
        onResponderRelease={[Function]}
        onResponderTerminate={[Function]}
        onResponderTerminationRequest={[Function]}
        onStartShouldSetResponder={[Function]}
        style={
          Object {
            "backgroundColor": "rgba(255,255,255,0)",
            "flexDirection": "row",
            "height": "100%",
            "marginHorizontal": 8,
            "opacity": 1,
            "width": 1,
          }
        }
        testID="group_item.button_wrapper"
      >
        <View
          style={
            Array [
              Object {
                "alignItems": "center",
                "flexDirection": "row",
                "justifyContent": "center",
              },
              undefined,
            ]
          }
          testID="button_wrapper.content"
        />
      </View>
      <View
        style={
          Array [
            Object {
              "flex": 1,
              "flexDirection": "row",
              "paddingLeft": 8,
              "paddingVertical": 8,
            },
            undefined,
          ]
        }
      >
        <View
          style={
            Array [
              Object {
                "borderRadius": 6,
                "height": 40,
                "width": 40,
              },
              undefined,
            ]
          }
          testID="avatar"
        >
          <View
            style={
              Array [
                Object {
                  "borderRadius": 6,
                  "height": 40,
                  "width": 40,
                },
                Object {
                  "backgroundColor": "#A4A9B7",
                },
              ]
            }
            testID="avatar_container"
          >
            <View
              style={
                Array [
                  Object {
                    "overflow": "hidden",
                  },
                  Array [
                    Object {
                      "borderRadius": 6,
                      "height": 40,
                      "width": 40,
                    },
                    Object {
                      "borderColor": "#F2F5F8",
                      "borderWidth": 2,
                    },
                    Object {
                      "backgroundColor": "#FFFFFF",
                    },
                  ],
                ]
              }
            >
              <FastImageView
                onFastImageError={[Function]}
                resizeMode="cover"
                source={null}
                style={
                  Object {
                    "bottom": 0,
                    "left": 0,
                    "position": "absolute",
                    "right": 0,
                    "top": 0,
                  }
                }
                testID="avatar.image"
              />
            </View>
          </View>
        </View>
        <View
          style={
            Object {
              "flex": 1,
              "justifyContent": "center",
              "paddingHorizontal": 12,
            }
          }
        >
          <Text
            numberOfLines={2}
            style={
              Array [
                Object {
                  "color": "#212745",
                  "fontFamily": "BeVietnamPro-Medium",
                  "fontSize": 15,
                },
                Object {
                  "color": "#282E53",
                },
                Object {
                  "justifyContent": "center",
                  "width": "100%",
                },
              ]
            }
          >
            Bein Product Team
          </Text>
        </View>
        <View
          accessibilityState={
            Object {
              "disabled": false,
            }
          }
          accessible={true}
          collapsable={false}
          focusable={true}
          onClick={[Function]}
          onResponderGrant={[Function]}
          onResponderMove={[Function]}
          onResponderRelease={[Function]}
          onResponderTerminate={[Function]}
          onResponderTerminationRequest={[Function]}
          onStartShouldSetResponder={[Function]}
          style={
            Object {
              "opacity": 1,
            }
          }
          testID="group_item.check_box"
        >
          <View
            style={
              Array [
                Object {
                  "alignItems": "center",
                  "flexDirection": "row",
                },
                Object {},
              ]
            }
          >
            <View
              style={
                Array [
                  Object {
                    "backgroundColor": "#FFFFFF",
                    "bottom": 2,
                    "left": 2,
                    "position": "absolute",
                    "right": 2,
                    "top": 2,
                  },
                  undefined,
                ]
              }
            />
            <View
              accessibilityState={
                Object {
                  "disabled": true,
                }
              }
              accessible={true}
              collapsable={false}
              focusable={false}
              hitSlop={
                Object {
                  "bottom": 10,
                  "left": 10,
                  "right": 10,
                  "top": 10,
                }
              }
              onClick={[Function]}
              onResponderGrant={[Function]}
              onResponderMove={[Function]}
              onResponderRelease={[Function]}
              onResponderTerminate={[Function]}
              onResponderTerminationRequest={[Function]}
              onStartShouldSetResponder={[Function]}
              style={
                Object {
                  "opacity": 1,
                }
              }
            >
              <View
                style={
                  Array [
                    Object {
                      "alignItems": "center",
                      "flexDirection": "row",
                    },
                    undefined,
                    Object {
                      "backgroundColor": undefined,
                    },
                  ]
                }
              >
                <View
                  style={
                    Array [
                      undefined,
                      undefined,
                      undefined,
                    ]
                  }
                >
                  <View />
                </View>
              </View>
            </View>
          </View>
        </View>
      </View>
    </View>
  </View>
</View>
`;

exports[`GroupTree component should render correctly uncheck item 2`] = `
<View
  style={Object {}}
>
  <View
    accessible={true}
    collapsable={false}
    focusable={true}
    onClick={[Function]}
    onResponderGrant={[Function]}
    onResponderMove={[Function]}
    onResponderRelease={[Function]}
    onResponderTerminate={[Function]}
    onResponderTerminationRequest={[Function]}
    onStartShouldSetResponder={[Function]}
    style={
      Object {
        "opacity": 1,
      }
    }
    testID="group_item.container"
  >
    <View
      style={
        Object {
          "flexDirection": "row",
        }
      }
      testID="group_item"
    >
      <View
        accessibilityState={
          Object {
            "disabled": false,
          }
        }
        accessible={true}
        collapsable={false}
        focusable={true}
        hitSlop={
          Object {
            "bottom": 10,
            "left": 10,
            "right": 10,
            "top": 10,
          }
        }
        onClick={[Function]}
        onResponderGrant={[Function]}
        onResponderMove={[Function]}
        onResponderRelease={[Function]}
        onResponderTerminate={[Function]}
        onResponderTerminationRequest={[Function]}
        onStartShouldSetResponder={[Function]}
        style={
          Object {
            "backgroundColor": "rgba(255,255,255,0)",
            "flexDirection": "row",
            "height": "100%",
            "marginHorizontal": 8,
            "opacity": 1,
            "width": 1,
          }
        }
        testID="group_item.button_wrapper"
      >
        <View
          style={
            Array [
              Object {
                "alignItems": "center",
                "flexDirection": "row",
                "justifyContent": "center",
              },
              undefined,
            ]
          }
          testID="button_wrapper.content"
        >
          <View
            style={
              Object {
                "alignSelf": "center",
                "backgroundColor": "#FFFFFF",
                "marginLeft": -6,
                "paddingVertical": 4,
              }
            }
          >
            <View
              accessibilityState={
                Object {
                  "disabled": true,
                }
              }
              accessible={true}
              collapsable={false}
              focusable={false}
              hitSlop={
                Object {
                  "bottom": 10,
                  "left": 10,
                  "right": 10,
                  "top": 10,
                }
              }
              onClick={[Function]}
              onResponderGrant={[Function]}
              onResponderMove={[Function]}
              onResponderRelease={[Function]}
              onResponderTerminate={[Function]}
              onResponderTerminationRequest={[Function]}
              onStartShouldSetResponder={[Function]}
              style={
                Object {
                  "opacity": 1,
                }
              }
            >
              <View
                style={
                  Array [
                    Object {
                      "alignItems": "center",
                      "flexDirection": "row",
                    },
                    undefined,
                    Object {
                      "backgroundColor": undefined,
                    },
                  ]
                }
              >
                <View
                  style={
                    Array [
                      undefined,
                      undefined,
                      undefined,
                    ]
                  }
                >
                  <View
                    testID="group_item.button_wrapper.icon"
                  />
                </View>
              </View>
            </View>
          </View>
        </View>
      </View>
      <View
        style={
          Array [
            Object {
              "flex": 1,
              "flexDirection": "row",
              "paddingLeft": 8,
              "paddingVertical": 8,
            },
            undefined,
          ]
        }
      >
        <View
          style={
            Array [
              Object {
                "borderRadius": 6,
                "height": 40,
                "width": 40,
              },
              undefined,
            ]
          }
          testID="avatar"
        >
          <View
            style={
              Array [
                Object {
                  "borderRadius": 6,
                  "height": 40,
                  "width": 40,
                },
                Object {
                  "backgroundColor": "#A4A9B7",
                },
              ]
            }
            testID="avatar_container"
          >
            <View
              style={
                Array [
                  Object {
                    "overflow": "hidden",
                  },
                  Array [
                    Object {
                      "borderRadius": 6,
                      "height": 40,
                      "width": 40,
                    },
                    Object {
                      "borderColor": "#F2F5F8",
                      "borderWidth": 2,
                    },
                    Object {
                      "backgroundColor": "#FFFFFF",
                    },
                  ],
                ]
              }
            >
              <FastImageView
                onFastImageError={[Function]}
                resizeMode="cover"
                source={null}
                style={
                  Object {
                    "bottom": 0,
                    "left": 0,
                    "position": "absolute",
                    "right": 0,
                    "top": 0,
                  }
                }
                testID="avatar.image"
              />
            </View>
          </View>
        </View>
        <View
          style={
            Object {
              "flex": 1,
              "justifyContent": "center",
              "paddingHorizontal": 12,
            }
          }
        >
          <Text
            numberOfLines={2}
            style={
              Array [
                Object {
                  "color": "#212745",
                  "fontFamily": "BeVietnamPro-Medium",
                  "fontSize": 15,
                },
                Object {
                  "color": "#282E53",
                },
                Object {
                  "justifyContent": "center",
                  "width": "100%",
                },
              ]
            }
          >
            EVOL Community
          </Text>
        </View>
        <View
          accessibilityState={
            Object {
              "disabled": false,
            }
          }
          accessible={true}
          collapsable={false}
          focusable={true}
          onClick={[Function]}
          onResponderGrant={[Function]}
          onResponderMove={[Function]}
          onResponderRelease={[Function]}
          onResponderTerminate={[Function]}
          onResponderTerminationRequest={[Function]}
          onStartShouldSetResponder={[Function]}
          style={
            Object {
              "opacity": 1,
            }
          }
          testID="group_item.check_box"
        >
          <View
            style={
              Array [
                Object {
                  "alignItems": "center",
                  "flexDirection": "row",
                },
                Object {},
              ]
            }
          >
            <View
              style={
                Array [
                  Object {
                    "backgroundColor": "#FFFFFF",
                    "bottom": 2,
                    "left": 2,
                    "position": "absolute",
                    "right": 2,
                    "top": 2,
                  },
                  undefined,
                ]
              }
            />
            <View
              accessibilityState={
                Object {
                  "disabled": true,
                }
              }
              accessible={true}
              collapsable={false}
              focusable={false}
              hitSlop={
                Object {
                  "bottom": 10,
                  "left": 10,
                  "right": 10,
                  "top": 10,
                }
              }
              onClick={[Function]}
              onResponderGrant={[Function]}
              onResponderMove={[Function]}
              onResponderRelease={[Function]}
              onResponderTerminate={[Function]}
              onResponderTerminationRequest={[Function]}
              onStartShouldSetResponder={[Function]}
              style={
                Object {
                  "opacity": 1,
                }
              }
            >
              <View
                style={
                  Array [
                    Object {
                      "alignItems": "center",
                      "flexDirection": "row",
                    },
                    undefined,
                    Object {
                      "backgroundColor": undefined,
                    },
                  ]
                }
              >
                <View
                  style={
                    Array [
                      undefined,
                      undefined,
                      undefined,
                    ]
                  }
                >
                  <View />
                </View>
              </View>
            </View>
          </View>
        </View>
      </View>
    </View>
  </View>
  <View
    accessible={true}
    collapsable={false}
    focusable={true}
    onClick={[Function]}
    onResponderGrant={[Function]}
    onResponderMove={[Function]}
    onResponderRelease={[Function]}
    onResponderTerminate={[Function]}
    onResponderTerminationRequest={[Function]}
    onStartShouldSetResponder={[Function]}
    style={
      Object {
        "opacity": 1,
      }
    }
    testID="group_item.container"
  >
    <View
      style={
        Object {
          "flexDirection": "row",
        }
      }
      testID="group_item"
    >
      <View
        style={
          Array [
            Object {
              "backgroundColor": "#E3E6F2",
              "height": "100%",
              "marginHorizontal": 8,
              "width": 1,
            },
          ]
        }
        testID="group_item.ui_level"
      />
      <View
        accessibilityState={
          Object {
            "disabled": false,
          }
        }
        accessible={true}
        collapsable={false}
        focusable={true}
        hitSlop={
          Object {
            "bottom": 10,
            "left": 10,
            "right": 10,
            "top": 10,
          }
        }
        onClick={[Function]}
        onResponderGrant={[Function]}
        onResponderMove={[Function]}
        onResponderRelease={[Function]}
        onResponderTerminate={[Function]}
        onResponderTerminationRequest={[Function]}
        onStartShouldSetResponder={[Function]}
        style={
          Object {
            "backgroundColor": "rgba(255,255,255,0)",
            "flexDirection": "row",
            "height": "100%",
            "marginHorizontal": 8,
            "opacity": 1,
            "width": 1,
          }
        }
        testID="group_item.button_wrapper"
      >
        <View
          style={
            Array [
              Object {
                "alignItems": "center",
                "flexDirection": "row",
                "justifyContent": "center",
              },
              undefined,
            ]
          }
          testID="button_wrapper.content"
        >
          <View
            style={
              Object {
                "alignSelf": "center",
                "backgroundColor": "#FFFFFF",
                "marginLeft": -6,
                "paddingVertical": 4,
              }
            }
          >
            <View
              accessibilityState={
                Object {
                  "disabled": true,
                }
              }
              accessible={true}
              collapsable={false}
              focusable={false}
              hitSlop={
                Object {
                  "bottom": 10,
                  "left": 10,
                  "right": 10,
                  "top": 10,
                }
              }
              onClick={[Function]}
              onResponderGrant={[Function]}
              onResponderMove={[Function]}
              onResponderRelease={[Function]}
              onResponderTerminate={[Function]}
              onResponderTerminationRequest={[Function]}
              onStartShouldSetResponder={[Function]}
              style={
                Object {
                  "opacity": 1,
                }
              }
            >
              <View
                style={
                  Array [
                    Object {
                      "alignItems": "center",
                      "flexDirection": "row",
                    },
                    undefined,
                    Object {
                      "backgroundColor": undefined,
                    },
                  ]
                }
              >
                <View
                  style={
                    Array [
                      undefined,
                      undefined,
                      undefined,
                    ]
                  }
                >
                  <View
                    testID="group_item.button_wrapper.icon"
                  />
                </View>
              </View>
            </View>
          </View>
        </View>
      </View>
      <View
        style={
          Array [
            Object {
              "flex": 1,
              "flexDirection": "row",
              "paddingLeft": 8,
              "paddingVertical": 8,
            },
            undefined,
          ]
        }
      >
        <View
          style={
            Array [
              Object {
                "borderRadius": 6,
                "height": 40,
                "width": 40,
              },
              undefined,
            ]
          }
          testID="avatar"
        >
          <View
            style={
              Array [
                Object {
                  "borderRadius": 6,
                  "height": 40,
                  "width": 40,
                },
                Object {
                  "backgroundColor": "#A4A9B7",
                },
              ]
            }
            testID="avatar_container"
          >
            <View
              style={
                Array [
                  Object {
                    "overflow": "hidden",
                  },
                  Array [
                    Object {
                      "borderRadius": 6,
                      "height": 40,
                      "width": 40,
                    },
                    Object {
                      "borderColor": "#F2F5F8",
                      "borderWidth": 2,
                    },
                    Object {
                      "backgroundColor": "#FFFFFF",
                    },
                  ],
                ]
              }
            >
              <FastImageView
                onFastImageError={[Function]}
                resizeMode="cover"
                source={null}
                style={
                  Object {
                    "bottom": 0,
                    "left": 0,
                    "position": "absolute",
                    "right": 0,
                    "top": 0,
                  }
                }
                testID="avatar.image"
              />
            </View>
          </View>
        </View>
        <View
          style={
            Object {
              "flex": 1,
              "justifyContent": "center",
              "paddingHorizontal": 12,
            }
          }
        >
          <Text
            numberOfLines={2}
            style={
              Array [
                Object {
                  "color": "#212745",
                  "fontFamily": "BeVietnamPro-Medium",
                  "fontSize": 15,
                },
                Object {
                  "color": "#282E53",
                },
                Object {
                  "justifyContent": "center",
                  "width": "100%",
                },
              ]
            }
          >
            Bein Community
          </Text>
        </View>
        <View
          accessibilityState={
            Object {
              "disabled": false,
            }
          }
          accessible={true}
          collapsable={false}
          focusable={true}
          onClick={[Function]}
          onResponderGrant={[Function]}
          onResponderMove={[Function]}
          onResponderRelease={[Function]}
          onResponderTerminate={[Function]}
          onResponderTerminationRequest={[Function]}
          onStartShouldSetResponder={[Function]}
          style={
            Object {
              "opacity": 1,
            }
          }
          testID="group_item.check_box"
        >
          <View
            style={
              Array [
                Object {
                  "alignItems": "center",
                  "flexDirection": "row",
                },
                Object {},
              ]
            }
          >
            <View
              style={
                Array [
                  Object {
                    "backgroundColor": "#FFFFFF",
                    "bottom": 2,
                    "left": 2,
                    "position": "absolute",
                    "right": 2,
                    "top": 2,
                  },
                  undefined,
                ]
              }
            />
            <View
              accessibilityState={
                Object {
                  "disabled": true,
                }
              }
              accessible={true}
              collapsable={false}
              focusable={false}
              hitSlop={
                Object {
                  "bottom": 10,
                  "left": 10,
                  "right": 10,
                  "top": 10,
                }
              }
              onClick={[Function]}
              onResponderGrant={[Function]}
              onResponderMove={[Function]}
              onResponderRelease={[Function]}
              onResponderTerminate={[Function]}
              onResponderTerminationRequest={[Function]}
              onStartShouldSetResponder={[Function]}
              style={
                Object {
                  "opacity": 1,
                }
              }
            >
              <View
                style={
                  Array [
                    Object {
                      "alignItems": "center",
                      "flexDirection": "row",
                    },
                    undefined,
                    Object {
                      "backgroundColor": undefined,
                    },
                  ]
                }
              >
                <View
                  style={
                    Array [
                      undefined,
                      undefined,
                      undefined,
                    ]
                  }
                >
                  <View />
                </View>
              </View>
            </View>
          </View>
        </View>
      </View>
    </View>
  </View>
  <View
    accessible={true}
    collapsable={false}
    focusable={true}
    onClick={[Function]}
    onResponderGrant={[Function]}
    onResponderMove={[Function]}
    onResponderRelease={[Function]}
    onResponderTerminate={[Function]}
    onResponderTerminationRequest={[Function]}
    onStartShouldSetResponder={[Function]}
    style={
      Object {
        "opacity": 1,
      }
    }
    testID="group_item.container"
  >
    <View
      style={
        Object {
          "flexDirection": "row",
        }
      }
      testID="group_item"
    >
      <View
        style={
          Array [
            Object {
              "backgroundColor": "#E3E6F2",
              "height": "100%",
              "marginHorizontal": 8,
              "width": 1,
            },
          ]
        }
        testID="group_item.ui_level"
      />
      <View
        style={
          Array [
            Object {
              "backgroundColor": "#E3E6F2",
              "height": "100%",
              "marginHorizontal": 8,
              "width": 1,
            },
          ]
        }
        testID="group_item.ui_level"
      />
      <View
        accessibilityState={
          Object {
            "disabled": true,
          }
        }
        accessible={true}
        collapsable={false}
        focusable={true}
        hitSlop={
          Object {
            "bottom": 10,
            "left": 10,
            "right": 10,
            "top": 10,
          }
        }
        onClick={[Function]}
        onResponderGrant={[Function]}
        onResponderMove={[Function]}
        onResponderRelease={[Function]}
        onResponderTerminate={[Function]}
        onResponderTerminationRequest={[Function]}
        onStartShouldSetResponder={[Function]}
        style={
          Object {
            "backgroundColor": "rgba(255,255,255,0)",
            "flexDirection": "row",
            "height": "100%",
            "marginHorizontal": 8,
            "opacity": 1,
            "width": 1,
          }
        }
        testID="group_item.button_wrapper"
      >
        <View
          style={
            Array [
              Object {
                "alignItems": "center",
                "flexDirection": "row",
                "justifyContent": "center",
              },
              undefined,
            ]
          }
          testID="button_wrapper.content"
        />
      </View>
      <View
        style={
          Array [
            Object {
              "flex": 1,
              "flexDirection": "row",
              "paddingLeft": 8,
              "paddingVertical": 8,
            },
            undefined,
          ]
        }
      >
        <View
          style={
            Array [
              Object {
                "borderRadius": 6,
                "height": 40,
                "width": 40,
              },
              undefined,
            ]
          }
          testID="avatar"
        >
          <View
            style={
              Array [
                Object {
                  "borderRadius": 6,
                  "height": 40,
                  "width": 40,
                },
                Object {
                  "backgroundColor": "#A4A9B7",
                },
              ]
            }
            testID="avatar_container"
          >
            <View
              style={
                Array [
                  Object {
                    "overflow": "hidden",
                  },
                  Array [
                    Object {
                      "borderRadius": 6,
                      "height": 40,
                      "width": 40,
                    },
                    Object {
                      "borderColor": "#F2F5F8",
                      "borderWidth": 2,
                    },
                    Object {
                      "backgroundColor": "#FFFFFF",
                    },
                  ],
                ]
              }
            >
              <FastImageView
                onFastImageError={[Function]}
                resizeMode="cover"
                source={null}
                style={
                  Object {
                    "bottom": 0,
                    "left": 0,
                    "position": "absolute",
                    "right": 0,
                    "top": 0,
                  }
                }
                testID="avatar.image"
              />
            </View>
          </View>
        </View>
        <View
          style={
            Object {
              "flex": 1,
              "justifyContent": "center",
              "paddingHorizontal": 12,
            }
          }
        >
          <Text
            numberOfLines={2}
            style={
              Array [
                Object {
                  "color": "#212745",
                  "fontFamily": "BeVietnamPro-Medium",
                  "fontSize": 15,
                },
                Object {
                  "color": "#282E53",
                },
                Object {
                  "justifyContent": "center",
                  "width": "100%",
                },
              ]
            }
          >
            Bein Product Team
          </Text>
        </View>
        <View
          accessibilityState={
            Object {
              "disabled": false,
            }
          }
          accessible={true}
          collapsable={false}
          focusable={true}
          onClick={[Function]}
          onResponderGrant={[Function]}
          onResponderMove={[Function]}
          onResponderRelease={[Function]}
          onResponderTerminate={[Function]}
          onResponderTerminationRequest={[Function]}
          onStartShouldSetResponder={[Function]}
          style={
            Object {
              "opacity": 1,
            }
          }
          testID="group_item.check_box"
        >
          <View
            style={
              Array [
                Object {
                  "alignItems": "center",
                  "flexDirection": "row",
                },
                Object {},
              ]
            }
          >
            <View
              style={
                Array [
                  Object {
                    "backgroundColor": "#FFFFFF",
                    "bottom": 2,
                    "left": 2,
                    "position": "absolute",
                    "right": 2,
                    "top": 2,
                  },
                  undefined,
                ]
              }
            />
            <View
              accessibilityState={
                Object {
                  "disabled": true,
                }
              }
              accessible={true}
              collapsable={false}
              focusable={false}
              hitSlop={
                Object {
                  "bottom": 10,
                  "left": 10,
                  "right": 10,
                  "top": 10,
                }
              }
              onClick={[Function]}
              onResponderGrant={[Function]}
              onResponderMove={[Function]}
              onResponderRelease={[Function]}
              onResponderTerminate={[Function]}
              onResponderTerminationRequest={[Function]}
              onStartShouldSetResponder={[Function]}
              style={
                Object {
                  "opacity": 1,
                }
              }
            >
              <View
                style={
                  Array [
                    Object {
                      "alignItems": "center",
                      "flexDirection": "row",
                    },
                    undefined,
                    Object {
                      "backgroundColor": undefined,
                    },
                  ]
                }
              >
                <View
                  style={
                    Array [
                      undefined,
                      undefined,
                      undefined,
                    ]
                  }
                >
                  <View />
                </View>
              </View>
            </View>
          </View>
        </View>
      </View>
    </View>
  </View>
</View>
`;

exports[`GroupTree component should renders correctly toggle group 1`] = `
<View
  style={Object {}}
>
  <View
    accessible={true}
    collapsable={false}
    focusable={true}
    onClick={[Function]}
    onResponderGrant={[Function]}
    onResponderMove={[Function]}
    onResponderRelease={[Function]}
    onResponderTerminate={[Function]}
    onResponderTerminationRequest={[Function]}
    onStartShouldSetResponder={[Function]}
    style={
      Object {
        "opacity": 1,
      }
    }
    testID="group_item.container"
  >
    <View
      style={
        Object {
          "flexDirection": "row",
        }
      }
      testID="group_item"
    >
      <View
        accessibilityState={
          Object {
            "disabled": false,
          }
        }
        accessible={true}
        collapsable={false}
        focusable={true}
        hitSlop={
          Object {
            "bottom": 10,
            "left": 10,
            "right": 10,
            "top": 10,
          }
        }
        onClick={[Function]}
        onResponderGrant={[Function]}
        onResponderMove={[Function]}
        onResponderRelease={[Function]}
        onResponderTerminate={[Function]}
        onResponderTerminationRequest={[Function]}
        onStartShouldSetResponder={[Function]}
        style={
          Object {
            "backgroundColor": "rgba(255,255,255,0)",
            "flexDirection": "row",
            "height": "100%",
            "marginHorizontal": 8,
            "opacity": 1,
            "width": 1,
          }
        }
        testID="group_item.button_wrapper"
      >
        <View
          style={
            Array [
              Object {
                "alignItems": "center",
                "flexDirection": "row",
                "justifyContent": "center",
              },
              undefined,
            ]
          }
          testID="button_wrapper.content"
        >
          <View
            style={
              Object {
                "alignSelf": "center",
                "backgroundColor": "#FFFFFF",
                "marginLeft": -6,
                "paddingVertical": 4,
              }
            }
          >
            <View
              accessibilityState={
                Object {
                  "disabled": true,
                }
              }
              accessible={true}
              collapsable={false}
              focusable={false}
              hitSlop={
                Object {
                  "bottom": 10,
                  "left": 10,
                  "right": 10,
                  "top": 10,
                }
              }
              onClick={[Function]}
              onResponderGrant={[Function]}
              onResponderMove={[Function]}
              onResponderRelease={[Function]}
              onResponderTerminate={[Function]}
              onResponderTerminationRequest={[Function]}
              onStartShouldSetResponder={[Function]}
              style={
                Object {
                  "opacity": 1,
                }
              }
            >
              <View
                style={
                  Array [
                    Object {
                      "alignItems": "center",
                      "flexDirection": "row",
                    },
                    undefined,
                    Object {
                      "backgroundColor": undefined,
                    },
                  ]
                }
              >
                <View
                  style={
                    Array [
                      undefined,
                      undefined,
                      undefined,
                    ]
                  }
                >
                  <View
                    testID="group_item.button_wrapper.icon"
                  />
                </View>
              </View>
            </View>
          </View>
        </View>
      </View>
      <View
        style={
          Array [
            Object {
              "flex": 1,
              "flexDirection": "row",
              "paddingLeft": 8,
              "paddingVertical": 8,
            },
            undefined,
          ]
        }
      >
        <View
          style={
            Array [
              Object {
                "borderRadius": 6,
                "height": 40,
                "width": 40,
              },
              undefined,
            ]
          }
          testID="avatar"
        >
          <View
            style={
              Array [
                Object {
                  "borderRadius": 6,
                  "height": 40,
                  "width": 40,
                },
                Object {
                  "backgroundColor": "#A4A9B7",
                },
              ]
            }
            testID="avatar_container"
          >
            <View
              style={
                Array [
                  Object {
                    "overflow": "hidden",
                  },
                  Array [
                    Object {
                      "borderRadius": 6,
                      "height": 40,
                      "width": 40,
                    },
                    Object {
                      "borderColor": "#F2F5F8",
                      "borderWidth": 2,
                    },
                    Object {
                      "backgroundColor": "#FFFFFF",
                    },
                  ],
                ]
              }
            >
              <FastImageView
                onFastImageError={[Function]}
                resizeMode="cover"
                source={null}
                style={
                  Object {
                    "bottom": 0,
                    "left": 0,
                    "position": "absolute",
                    "right": 0,
                    "top": 0,
                  }
                }
                testID="avatar.image"
              />
            </View>
          </View>
        </View>
        <View
          style={
            Object {
              "flex": 1,
              "justifyContent": "center",
              "paddingHorizontal": 12,
            }
          }
        >
          <Text
            numberOfLines={2}
            style={
              Array [
                Object {
                  "color": "#212745",
                  "fontFamily": "BeVietnamPro-Medium",
                  "fontSize": 15,
                },
                Object {
                  "color": "#282E53",
                },
                Object {
                  "justifyContent": "center",
                  "width": "100%",
                },
              ]
            }
          >
            EVOL Community
          </Text>
        </View>
      </View>
    </View>
  </View>
</View>
`;
